[Add] メインコンテンツ内の記事タイトルエリア 追加

--- a/copy-zenn-site/index.html
+++ b/copy-zenn-site/index.html
@@ -48,6 +48,17 @@
         </div>
       </div>
     </header>
+
+    <article class="view_container">
+      <header class="article-header_header">
+        <div class="container_wide">
+          <div class="article-header_image">
+            <img class="article-header_image-material" src="./img/article-header_img.svg" alt="">
+            <!-- <span class="article-header_image-material">📝</span> -->
+          </div>
+          <h1 class="article-header_title">Zennの2種類の執筆方法について</h1>
+        </div>
+      </header>
   </div>
 </body>
 </html>
