[Update] ヘッダーエリアのアイコン画像にcssが当たるようクラス名修正

--- a/copy-zenn-site/index.html
+++ b/copy-zenn-site/index.html
@@ -36,7 +36,7 @@
                 </div>
                 <span style="display: block; width: 16px; height: 1px; flex-shrink: 0;"></span>
                 <button class="user-menu_buttonOpen">
-                  <img src="" alt="" class="avatar-image_border">
+                  <img class="profile-icon_image" src="./img/profile_icon.png" alt="">
                 </button>
                 <span style="display: block; width: 16px; height: 1px; flex-shrink: 0;"></span>
                 <div class="add-new-menu_buttonContainer">
