--- a/copy-zenn-site/index.html
+++ b/copy-zenn-site/index.html
@@ -268,6 +268,63 @@
                                 </div>
                             </div>
                         </section>
+                        <aside class="view-sidebar">
+                            <div class="article-sidebar_container">
+                                <!-- 記事詳細エリア -->
+                                <div class="article-sidebar_article-info">
+                                    <dl class="definition-list__list-container">
+                                        <div class="definition-list__item">
+                                            <dt class="definition-list__title-container">
+                                                <span class="definition-list__title-icon">
+                                                    <svg viewBox="0 0 1024 1024" height="15" width="15"><path fill="currentColor" d="M964.37,981.87A457.62,457.62,0,0,0,692,573.72,302.25,302.25,0,0,0,810.57,333.38,303,303,0,1,0,238.86,473.45a305.91,305.91,0,0,0,84.32,100.38A458.88,458.88,0,0,0,86.65,814.09,449.62,449.62,0,0,0,50.8,981.85a14.64,14.64,0,0,0,14.25,15h72.46a14.51,14.51,0,0,0,14.61-14.24,355.59,355.59,0,0,1,710.93,0,14.52,14.52,0,0,0,14.62,14.26h72.09a14.63,14.63,0,0,0,14.62-14.61ZM709.25,333.38a201.76,201.76,0,1,1-59.09-142.57A200.3,200.3,0,0,1,709.25,333.38Z"></path></svg>
+                                                </span>
+                                                <span class="definition-list__title-content">著者</span>
+                                            </dt>
+                                            <dd class="definition-list__author-container">
+                                                <span class="definition-list__icon">
+                                                    <img class="definition-list__icon-image" src="./img/Zenn02.jpeg" alt="">
+                                                </span>
+                                                <span class="definition-list__detail-text">Zenn公式</span>
+                                            </dd>
+                                        </div>
+                                        <div class="definition-list__item">
+                                            <dt class="definition-list__title-container">
+                                                <span class="definition-list__title-icon">
+                                                    <svg x="0px" y="0px" viewBox="0 0 24 24" enable-background="new 0 0 24 24" xml:space="preserve" height="14" width="14"><path fill="currentColor" d="M18.2,0.7c-0.8,0-1.4,0.5-1.4,1.3v3.1c0,0.7,0.7,1.3,1.4,1.3c0.7,0,1.4-0.5,1.4-1.3V2 C19.6,1.3,18.9,0.7,18.2,0.7z"></path><path fill="currentColor" d="M5.8,0.7C5,0.7,4.4,1.3,4.4,2v3.1c0,0.7,0.7,1.3,1.4,1.3s1.4-0.5,1.4-1.3V2C7.3,1.3,6.6,0.7,5.8,0.7z"></path><path fill="currentColor" d="M21.7,3.6H2.3c-1.1,0-2,0.9-2,2v15.7c0,1.1,0.9,2,2,2h19.4c1.1,0,2-0.9,2-2V5.5C23.6,4.5,22.8,3.6,21.7,3.6z  M21.4,19.8c0,0.6-0.5,1.1-1.1,1.1H3.4c-0.5,0-0.9-0.4-0.9-0.9V9.7h19V19.8z"></path></svg>
+                                                </span>
+                                                <span class="definition-list__title-content">公開</span>
+                                            </dt>
+                                            <dd class="definition-list__author-container">
+                                                <span class="definition-list__detail-text">2020/09/06</span>
+                                            </dd>
+                                        </div>
+                                        <div class="definition-list__item">
+                                            <dt class="definition-list__title-container">
+                                                <span class="definition-list__title-icon">
+                                                    <svg x="0px" y="0px" viewBox="0 0 24 24" enable-background="new 0 0 24 24" xml:space="preserve" height="15" width="15"><g fill="currentColor"><path d="M2.9,10H8c0.2,0,0.4-0.1,0.6-0.3c0.3-0.3,0.3-0.7,0-1.1l-2.2-2c1.5-1.5,3.5-2.3,5.6-2.3c4,0,7.2,2.9,7.7,6.8 c0.1,0.7,0.7,1.1,1.4,1.1l0.1,0c0.8-0.1,1.2-0.8,1.1-1.5c-0.5-5.2-5-9.1-10.3-9.1c-2.8,0-5.5,1.1-7.4,3.1L2.8,2.9 c-0.3-0.3-0.7-0.3-1.1,0C1.5,3.1,1.5,3.3,1.5,3.5v5.1C1.5,9.3,2.1,10,2.9,10z"></path><path d="M21.1,14H16c-0.2,0-0.4,0.1-0.6,0.3c-0.3,0.3-0.3,0.7,0,1.1l2.1,2.1c-1.5,1.5-3.5,2.3-5.6,2.3c-4,0-7.2-2.9-7.7-6.9 c-0.2-0.7-0.9-1.3-1.6-1.2c-0.8,0.1-1.2,0.8-1.1,1.5c0.5,5.2,5,9.1,10.3,9.1c2.8,0,5.5-1.1,7.4-3.1l1.8,1.8c0.3,0.3,0.7,0.3,1.1,0 c0.1-0.1,0.3-0.3,0.3-0.6v-5.1C22.5,14.7,21.9,14,21.1,14z"></path></g></svg>
+                                                </span>
+                                                <span class="definition-list__title-content">本文更新</span>
+                                            </dt>
+                                            <dd class="definition-list__author-container">
+                                                <span class="definition-list__icon">
+                                                    <svg class="definition-list__icon-svg" x="0px" y="0px" viewBox="0 0 27 27" style="enable-background:new 0 0 27 27" xml:space="preserve" height="20" width="20"><path fill="currentColor" d="M13.4,1.2C7,1,1.8,6,1.7,12.4c0,0.1,0,0.4,0,0.5c0,5.1,3.2,9.8,8.2,11.5c0.6,0.1,0.7-0.2,0.7-0.6s0-1.8,0-2.9 c0,0-3.3,0.6-4-1.5c0,0-0.6-1.3-1.3-1.8c0,0-1.1-0.7,0.1-0.7c0.7,0.1,1.5,0.6,1.8,1.2c0.6,1.2,2.2,1.7,3.4,1h0.1 c0.1-0.6,0.4-1.2,0.7-1.6C8.7,17.1,6,16.9,6,12.3c0-1.1,0.5-2.1,1.2-2.8c0-1.1,0-2.2,0.3-3.2c1-0.4,3.3,1.3,3.3,1.3c2-0.6,4-0.6,6,0 c0,0,2.2-1.6,3.2-1.2c0.5,1,0.5,2.2,0.1,3.2c0.7,0.7,1.2,1.8,1.2,2.8c0,4.5-2.8,5-5.5,5.2c0.6,0.6,0.9,1.3,0.7,2.2c0,1.7,0,3.5,0,4 s0.2,0.6,0.7,0.6c4.9-1.7,8.2-6.2,8-11.5c0.1-6.4-5.1-11.6-11.6-11.6C13.5,1.2,13.4,1.2,13.4,1.2z"></path></svg>
+                                                </span>
+                                                <span class="definition-list__detail-text">2021/09/09</span>
+                                            </dd>
+                                        </div>
+                                        <div class="definition-list__item-last">
+                                            <dt class="definition-list__title-container">
+                                                <span class="definition-list__title-icon">
+                                                    <svg x="0px" y="0px" viewBox="0 0 27 27" style="enable-background:new 0 0 27 27" xml:space="preserve" height="15" width="15"><path fill="currentColor" d="M4,1.7v23.4c0,0.6,0.5,0.9,0.9,0.9h19c0.3,0,0.7-0.3,0.7-0.7v-18L24.4,7l-5.2-5.7c-0.2-0.2-0.5-0.3-0.7-0.3H4.8 C4.3,0.9,4,1.3,4,1.7z M6.6,3.7h9.8v4.9c0,0.3,0.2,0.5,0.5,0.5h4.9v14.2H6.6C6.6,23.3,6.6,3.7,6.6,3.7z M19.1,4.3l2.4,2.5h-2.4V4.3 z"></path></svg>
+                                                </span>
+                                                <span class="definition-list__title-content">文章量</span>
+                                            </dt>
+                                            <dd class="definition-list__author-container">
+                                                <span class="definition-list__detail-text">約1,200字</span>
+                                            </dd>
+                                        </div>
+                                    </dl>
+                                </div>
                 </div>
               </div>
             </div>
