[Add] サイドバーエリア 著者プロフィール 追加

--- a/copy-zenn-site/index.html
+++ b/copy-zenn-site/index.html
@@ -325,6 +325,27 @@
                                         </div>
                                     </dl>
                                 </div>
+                                <!-- 著者プロフィールエリア -->
+                                <div class="view-author-info__contributor-area">                                    
+                                    <div class="view-author-info__container">
+                                        <a href="#" class="profile-icon">
+                                            <img class="profile-icon__image-02" src="./img/Zenn02.jpeg" alt="">
+                                        </a>
+                                        <div class="profile-content__area">
+                                            <p class="profile-content__title-02">Zenn公式</p>
+                                            <div class="profile-content__action-area">
+                                                <button class="follow-button">フォロー</button>
+                                                <div class="github-icon__area">
+                                                    <svg class="github-icon__svg-image" x="0px" y="0px" viewBox="0 0 27 27" style="enable-background:new 0 0 27 27" xml:space="preserve" aria-label="GitHub"><path fill="currentColor" d="M13.4,1.2C7,1,1.8,6,1.7,12.4c0,0.1,0,0.4,0,0.5c0,5.1,3.2,9.8,8.2,11.5c0.6,0.1,0.7-0.2,0.7-0.6s0-1.8,0-2.9 c0,0-3.3,0.6-4-1.5c0,0-0.6-1.3-1.3-1.8c0,0-1.1-0.7,0.1-0.7c0.7,0.1,1.5,0.6,1.8,1.2c0.6,1.2,2.2,1.7,3.4,1h0.1 c0.1-0.6,0.4-1.2,0.7-1.6C8.7,17.1,6,16.9,6,12.3c0-1.1,0.5-2.1,1.2-2.8c0-1.1,0-2.2,0.3-3.2c1-0.4,3.3,1.3,3.3,1.3c2-0.6,4-0.6,6,0 c0,0,2.2-1.6,3.2-1.2c0.5,1,0.5,2.2,0.1,3.2c0.7,0.7,1.2,1.8,1.2,2.8c0,4.5-2.8,5-5.5,5.2c0.6,0.6,0.9,1.3,0.7,2.2c0,1.7,0,3.5,0,4 s0.2,0.6,0.7,0.6c4.9-1.7,8.2-6.2,8-11.5c0.1-6.4-5.1-11.6-11.6-11.6C13.5,1.2,13.4,1.2,13.4,1.2z"></path></svg>
+                                                </div>
+                                                <div class="twitter-icon__area">
+                                                    <svg class="twitter-icon__svg-image" x="0px" y="0px" viewBox="0 0 27 27" style="enable-background:new 0 0 27 27" xml:space="preserve" aria-label="Twitter"><path fill="currentColor" d="M23.1,8.7c0,0.2,0,0.5,0,0.7c0,8-6.4,14.5-14.4,14.6c-0.1,0-0.1,0-0.2,0c-2.8,0-5.5-0.8-7.9-2.3c0.4,0,0.8,0.1,1.2,0.1 c2.3,0,4.6-0.8,6.3-2.1C6,19.6,4,18.2,3.3,16c0.3,0.1,0.7,0.1,1,0.1c0.5,0,0.9-0.1,1.4-0.2c-2.4-0.5-4.1-2.6-4.1-5.1v-0.1 c0.7,0.4,1.5,0.6,2.3,0.7c-1.5-1-2.2-2.5-2.2-4.3c0-0.9,0.2-1.8,0.7-2.6C5,7.8,8.8,9.7,13,9.9c-0.1-0.4-0.1-0.8-0.1-1.2 c0-2.8,2.2-5.2,5.2-5.2c1.5,0,2.8,0.6,3.8,1.7C23,5,24,4.6,25,4.1c-0.4,1.2-1.2,2.1-2.2,2.8c1-0.1,2-0.4,2.9-0.8 C24.9,7.1,24,7.9,23.1,8.7L23.1,8.7z"></path></svg>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <p class="profile-content__detail-02">Zennの使い方や開発状況を発信する公式アカウントです。</p>
+                                </div>
                 </div>
               </div>
             </div>
