[Add] フッターエリア 追加

--- a/copy-zenn-site/index.html
+++ b/copy-zenn-site/index.html
@@ -595,5 +595,89 @@
                 </footer>
             </div>
         </article>
+
+        <footer class="app-footer__footer">
+            <div class="container_wide">
+                <div class="app-footer__list-area">
+                    <div class="app-footer__branding-column">
+                        <a href="#" class="app-footer__home-link">
+                            <img class="app-footer__home-link-img" src="./img/Zenn04.png" alt="">
+                            <p class="app-footer__home-link-content">Zenn</p>
+                        </a>
+                        <p class="app-footer__column-content">エンジニアのための<br>情報共有コミュニティ</p>
+                    </div>
+                    <div class="app-footer__nav-container">
+                        <nav class="app-footer__nav-item">
+                            <h4 class="app-footer__nav-title">About</h4>
+                            <ul class="app-footer__nav-list-container">
+                                <li class="app-footer__nav-list">
+                                    <a href="" class="app-footer__nav-anchor">Zennについて</a>
+                                </li>
+                                <li class="app-footer__nav-list">
+                                    <a href="" class="app-footer__nav-anchor">運営会社</a>
+                                </li>
+                                <li class="app-footer__nav-list">
+                                    <a href="" class="app-footer__nav-anchor">お知らせ・リリース</a>
+                                </li>
+                            </ul>
+                        </nav>
+                        <nav class="app-footer__nav-item">
+                            <h4 class="app-footer__nav-title">About</h4>
+                            <ul class="app-footer__nav-list-container">
+                                <li class="app-footer__nav-list">
+                                    <a href="" class="app-footer__nav-anchor">使い方</a>
+                                </li>
+                                <li class="app-footer__nav-list">
+                                    <a href="" class="app-footer__nav-anchor">Publication</a>
+                                </li>
+                                <li class="app-footer__nav-list">
+                                    <a href="" class="app-footer__nav-anchor">よくある質問</a>
+                                </li>
+                            </ul>
+                        </nav>
+                        <nav class="app-footer__nav-item">
+                            <h4 class="app-footer__nav-title">About</h4>
+                            <ul class="app-footer__nav-list-container">
+                                <li class="app-footer__nav-list">
+                                    <a href="" class="app-footer__nav-anchor">Twitter</a>
+                                </li>
+                                <li class="app-footer__nav-list">
+                                    <a href="" class="app-footer__nav-anchor">Github</a>
+                                </li>
+                                <li class="app-footer__nav-list">
+                                    <a href="" class="app-footer__nav-anchor">メディアキット</a>
+                                </li>
+                            </ul>
+                        </nav>
+                        <nav class="app-footer__nav-item">
+                            <h4 class="app-footer__nav-title">About</h4>
+                            <ul class="app-footer__nav-list-container">
+                                <li class="app-footer__nav-list">
+                                    <a href="" class="app-footer__nav-anchor">利用規約</a>
+                                </li>
+                                <li class="app-footer__nav-list">
+                                    <a href="" class="app-footer__nav-anchor">プライバシーポリシー</a>
+                                </li>
+                                <li class="app-footer__nav-list">
+                                    <a href="" class="app-footer__nav-anchor">特商法表記</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+                <div class="app-footer__copyright">
+                    <div class="app-footer__event-note">
+                        <div class="app-footer__event-popup">
+                            <p class="app-footer__event-popup-text">DevelopersIO 2023<br>7.7(金)〜7.8(土) 開催決定</p>
+                        </div>
+                    </div>
+                    <a href="" class="app-footer__classmethod-anchor">
+                        <img src="./img/Zenn29.svg" alt="" class="app-footer__classmethod-image">
+                    </a>
+                </div>
+            </div>
+        </footer>
+    </div>
 </body>
+
 </html>
