[Add] 目次エリア 作成

--- a/copy-zenn-site/index.html
+++ b/copy-zenn-site/index.html
@@ -346,13 +346,30 @@
                                     </div>
                                     <p class="profile-content__detail-02">Zennの使い方や開発状況を発信する公式アカウントです。</p>
                                 </div>
+                                <!-- 目次エリア -->
+                                <div class="article-sidebar__topic-info">
+                                    <p class="outline-title">目次</p>
+                                    <div class="outline-contents__container">
+                                        <ol class="ol-depth-1">
+                                            <li class="outline-list">
+                                                <a href="#" class="outline-anchor__h1">Zenn の執筆方法は 2 種類</a>
+                                                <ol class="ol-depth-2">
+                                                    <li class="outline-h2__list">
+                                                        <a href="" class="outline-anchor__h2">1. Webエディター</a>
+                                                    </li>
+                                                    <li class="outline-h2__list">
+                                                        <a href="" class="outline-anchor__h2">2. ローカルのテキストエディター + CLI</a>
+                                                    </li>
+                                                </ol>
+                                            </li>
+                                        </ol>
+                                    </div>
+                                </div>
+                            </div>
+                        </aside>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
-        </div>
-      </div>
-    </header>
 
             <!-- Read nextエリア -->
             <div class="related-contents__area">
