add sample displaying todo

--- a/JavaScript/js-todo/todo.html
+++ b/JavaScript/js-todo/todo.html
@@ -27,6 +27,16 @@
     </div>    
 
     <div class="container-md bg-warning d-flex align-items-center">
+      <!-- 表示されるTODOサンプル -->
+      <!-- <ul id="sample-todo">
+        <li class="d-flex align-items-center bg-info py-2" style="list-style: none;">
+          <input type="checkbox" class="form-check-input me-2">
+          <span class="form-control" style="width: 250px;">サンプル</span>
+          <button class="btn btn-primary ms-2 me-1">編集</button>
+          <button class="btn btn-danger">削除</button>
+        </li>
+      </ul> -->
+
       <!-- ここにjs側から要素を追加する -->
       <ul id="created-todo"></ul>
     </div>
