add todo management logic and display results

--- a/JavaScript/js-todo/todo.html
+++ b/JavaScript/js-todo/todo.html
@@ -15,9 +15,9 @@
     -->
     <div class="container border bg-success">
       <ul id="">
-        <li style="list-style: none;">全てのタスク: 3</li>
-        <li>完了済み: 2</li>
-        <li>未完了: 1</li>
+        <li>全てのタスク: <span id="all-tasks"></span></li>
+        <li>完了済み: <span id="completed-tasks"></span></li>
+        <li>未完了: <span id="incomplete-tasks"></span></li>
       </ul>
     </div>
     
