--- a/JavaScript/js-todo/todo.html
+++ b/JavaScript/js-todo/todo.html
@@ -3,30 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+  rel="stylesheet">
   <title>JS TODO</title>
 </head>
-<body>
+<body class="bg-light">
   
-  <div class="container bg-danger w-75 w-md-50">
-    <h1 btn>TODO管理</h1>
-    <!-- UI調整　todo
-      pc画面の時はw-50にする
-    -->
-    <div class="container border bg-success">
-      <ul id="">
+  <div class="container bg-primary-subtle w-75 w-sm-75 w-md-50 mt-5 rounded">
+    <h1 class="text-primary-emphasis py-2">TODO List</h1>
+    <div class="container">
+      <ul id="" class="bg-success-subtle border border-2 border-primary-subtle py-2">
         <li>全てのタスク: <span id="all-tasks"></span></li>
         <li>完了済み: <span id="completed-tasks"></span></li>
         <li>未完了: <span id="incomplete-tasks"></span></li>
       </ul>
     </div>
     
-    <div class="container-md bg-light d-flex todo">
+    <div class="container-md bg-primary-subtle d-flex todo">
       <input type="text" class="form-control" id="input-text" style="width: 250px; margin-left: 32px;" placeholder="TODOを入力してください">
-      <button type="button" class="btn btn-info px-4 ms-2" id="add-todo">作成</button>
+      <button type="button" class="btn btn-info text-white px-4 ms-2" id="add-todo">作成</button>
     </div>    
 
-    <div class="container-md bg-warning d-flex align-items-center">
+    <div class="container-md bg-primary-subtle d-flex align-items-center">
       <!-- 表示されるTODOサンプル -->
       <!-- <ul id="sample-todo">
         <li class="d-flex align-items-center bg-info py-2" style="list-style: none;">
@@ -37,7 +35,7 @@
         </li>
       </ul> -->
 
-      <!-- ここにjs側から要素を追加する -->
+      <!-- ここにjs側から要素を追加 -->
       <ul id="created-todo"></ul>
     </div>
 
