--- a/JavaScript/js-todo/todo.html
+++ b/JavaScript/js-todo/todo.html
@@ -12,7 +12,7 @@
   <div class="container bg-primary-subtle w-75 w-sm-75 w-md-50 mt-5 rounded">
     <h1 class="text-primary-emphasis py-2">TODO List</h1>
     <div class="container">
-      <ul id="" class="bg-success-subtle border border-2 border-primary-subtle py-2">
+      <ul id="" class="bg-success-subtle border border-2 border-primary-subtle py-2 rounded">
         <li>全てのタスク: <span id="all-tasks"></span></li>
         <li>完了済み: <span id="completed-tasks"></span></li>
         <li>未完了: <span id="incomplete-tasks"></span></li>
