--- a/JavaScript/js-todo/todo.html
+++ b/JavaScript/js-todo/todo.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-light">
   
-  <div class="container bg-primary-subtle w-75 w-sm-75 w-md-50 mt-5 rounded">
+  <div class="container bg-primary-subtle w-50 mt-5 rounded">
     <h1 class="text-primary-emphasis py-2">TODO List</h1>
     <div class="container">
       <ul id="" class="bg-success-subtle border border-2 border-primary-subtle py-2 rounded">
