--- a/JavaScript/js-todo/todo.html
+++ b/JavaScript/js-todo/todo.html
@@ -40,6 +40,7 @@
     </div>
 
   </div>
-  <script type="module" src="./todo.js"></script>
+  <!-- <script type="module" src="./todo.js"></script> -->
+  <script type="module" src="./refactoredTodo.js"></script>
 </body>
 </html>
